# launcher

./: .gitignore  .gitmodules  meson.build
include/: config.h  history.h  macros.h  provider_repository.h
include/model/: api.h  module_interfaces.h
include/providers/console/: provider.h
include/providers/desktop-entries/: provider.h
include/ui/: list_item.h  main_window.h
include/utils/: fuzzy_matcher.h  owned_fd.h  ranges_helper.h  singleton.h  spawn_helper.h  xdg_base_directory.h  zstring_view.h
resources/: Launcher.cmb  Launcher.ui  ListBoxItem.ui  style.css  ui.gresource.xml
src/: config.cpp  history.cpp  launcher.cpp  macros.cpp  provider_repository.cpp
src/model/: api.cpp
src/providers/console/: provider.cpp
src/providers/desktop-entries/: provider.cpp
src/ui/: list_item.cpp  main_window.cpp  main_window_wayland.cpp
src/utils/: fuzzy_matcher.cpp  spawn_helper.cpp  xdg_base_directory.cpp
